Fixed overflow-x mobile bug

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,19 +67,34 @@ h3.fade-in, .subheader.fade-in {
 
 /*Image transitions*/
 .image-container-right {
-    opacity: 0; /* Start with opacity 0 to make the images invisible */
-    transform: translateX(40px); /* Move the images down 20px to prepare for the animation */
-    transition: opacity 0.5s ease, transform 0.5s ease; /* Add a smooth transition effect */
+    opacity: 0;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    width: 100%;
 }
+
 .image-container-left {
-    opacity: 0; /* Start with opacity 0 to make the images invisible */
-    transform: translateX(-40px); /* Move the images down 20px to prepare for the animation */
-    transition: opacity 0.5s ease, transform 0.5s ease; /* Add a smooth transition effect */
+    opacity: 0;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    width: 100%;
 }
+
 /* When the container is in the viewport, apply animation to make it visible */
 .image-container-left.is-visible, .image-container-right.is-visible {
     opacity: 1;
-    transform: translateX(0);
+}
+
+@media(min-width: 768px) {
+    .image-container-right {
+        transform: translateX(40px);
+    }
+    
+    .image-container-left {
+        transform: translateX(-40px);
+    }
+
+    .image-container-left.is-visible, .image-container-right.is-visible {
+        transform: translateX(0);
+    }
 }
 
 /* Buttons */
@@ -103,6 +118,7 @@ h3.fade-in, .subheader.fade-in {
     transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
     border: 1px solid var(--white) !important;
     overflow: hidden; /* Make sure the slider does not overflow */
+    height: fit-content !important;
 }
 
 /* Slider */
@@ -126,39 +142,23 @@ h3.fade-in, .subheader.fade-in {
     color: var(--white) !important;
 }
 
-/*Custom Styling*/
-body {
-    width: 100vw !important;
-    overflow-x: hidden !important;
-}
 
-#home {
+
+
+
+
+
+
+
+
+
+/*Custom Styling*/
+.bg-image {
     background-image: url('/imgs/physical_assets/lookout_2_masked.webp');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-}
-
-.bg-gradient-overlay-hero::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to top, rgba(27, 27, 27, 0.9), 30%, transparent);
-    z-index: 0;
-}
-
-.bg-gradient-overlay::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to top, rgba(27, 27, 27, 0.5), 100%, transparent);
-    z-index: 0;
+    height: 95vh;
 }
 
 #join {
